[package]
name = "agentvault"
version = "0.1.0"
description = "On-chain AI Agent Registry for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentvault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
